Continue rewrite 2.2. Finish elastic distance

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -135,17 +135,14 @@
   \begin{center}
   \sffamily{Chair of Statistics $\cdot$ School of Business and Economics $\cdot$ Humboldt-Universität zu Berlin}\\
   \vspace{1.66cm}
-    {\LARGE\sffamily\textbf{Elastic Full Procrustes Means\vspace{0.33cm}\\
+    {\LARGE\sffamily\textbf{Elastic Full Procrustes Means\vspace{0.5cm}\\
     for Sparse and Irregular Planar Curves}}
   \vspace{1.2cm}\\
-    {\large Masters Thesis}
-  \vspace{0.1cm}\\
-    in partial fulfillment of the requirements for the degree
-  \vspace{0.1cm}\\
+    {\large Masters Thesis}\\
+    in partial fulfillment of the requirements for the degree\\
     \textbf{M.Sc.\ Statistics}
   \vspace{1.2cm}\\
-  \textsc{\large Manuel Pfeuffer\footnote{\url{mnl.pfeuffer@gmail.com}, Matriculation number: 577668}}
-  \vspace{0.1cm}\\
+  \textsc{\large Manuel Pfeuffer\footnote{\url{mnl.pfeuffer@gmail.com}, Matriculation number: 577668}}\\
   \today, Berlin
   \vspace{2.0cm}\\
     \includegraphics[width=0.4\textwidth]{graphics/hulogo.pdf}
