--- a/tex/sections/2-theory.tex
+++ b/tex/sections/2-theory.tex
@@ -92,10 +92,8 @@ The three approaches can be combined to formulate the two \emph{Procrustes} dist
 The \emph{partial Procrustes distance} is defined as the minimizing distance $d_{PP}([\beta_1]_\text{Eucl}, [\beta_2]_\text{Eucl}) = \min_{\theta \in [0,2\pi]} \,\, \norm{\widetilde\beta_1 - e^{i\theta} \widetilde\beta_2}$, when rotationally aligning the centered and normalized curves $\widetilde\beta_i= \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$, $i=1,2$.
 On the other hand, the \emph{full Procrustes distance} (see Def. \ref{def:2-fpdist}) includes an additional alignment over scaling, leading to a slightly different geometrical interpretation \parencite[see][77-78]{DrydenMardia2016}.
 In this thesis we will only consider the full Procrustes distance, although no distance definition is inherently better than the other.
-In the context of mean estimation for sparse and irregular curves, the full Procrustes distance might be slightly more suitable, as the additional scaling alignment offers more flexibility in a setting where calculating a norm $\norm{\beta} = \int_0^1 \norm{\beta(t)}\, dt$ may already present a challange.
+In the context of mean estimation for sparse and irregular curves, the full Procrustes distance might be slightly more suitable, as the additional scaling alignment offers more flexibility in a setting where calculating a norm $\norm{\beta} = \int_0^1 \norm{\beta(t)}\, dt$ may already present a challenge.
 Note that in Def. \ref{def:2-fpdist} the optimization over scaling $\lambda \in \mathbb{R}$ and rotation $\theta \in [0,2\pi]$ was combined into a single optimization over \emph{rotation and scaling} $\omega = \lambda e^{i\theta} \in \mathbb{C}$.
-Furthermore, Fig. \ref{fig:2-pfit} shows an example of two curves that where aligned by minimizing their full Procrustes distance.
-Curves aligned in such a way are called \emph{Procrustes fits}.
 \begin{definition}[Full Procrustes distance]
   \label{def:2-fpdist}
   The \emph{full Procrustes distance} for two equivalence classes $[\beta_1]_\text{Eucl}$, $[\beta_2]_\text{Eucl}]$ is defined as
@@ -105,6 +103,8 @@ Curves aligned in such a way are called \emph{Procrustes fits}.
   \end{equation}
   with centered and normalized representatives $\widetilde\beta_i = \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$.
 \end{definition}
+
+\noindent By using a similar proof for complex-valued landmark data as a blueprint \parencite[see][Chap~8]{DrydenMardia2016}, we can show that Eq. \ref{eq:2-fpdist-def} has the following analytical solution.
 
 \begin{lemma}
   \label{lem:2-fpdist}
@@ -122,7 +122,9 @@ Curves aligned in such a way are called \emph{Procrustes fits}.
   \end{proof}
 \end{lemma}
 
-\begin{figure}[!hbt]
+\noindent Fig. \ref{fig:2-pfit} shows an example of two curves that where aligned by minimizing their full Procrustes distance using \ref{lem:2-fpdist}.
+
+\begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
     \centering
@@ -192,9 +194,7 @@ See Figure \ref{fig:2-srv} for an example SRV curve of a digit \enquote*{3}.
 \end{definition}
 
 \noindent Unlike the optimization over rotation in the definition of the full Procrustes distance (see Eq. \ref{eq:2-fpdist-def}), no analytical solution exists for the optimization over warping (see Eq. \ref{eq:2-eldist-def}) in the definition of the elastic distance.
-Instead, Eq. \ref{eq:2-eldist-def} is usually solved numerically, by minimizing a cost function $H[\gamma] = \int_0^1 \norm{q_1(t) - q_2\left( \gamma(t) \right) \sqrt{\dot\gamma(t)}}\, dt$ using a dynamic programming algorithm \parencite[see e.g.][152]{SrivastavaKlassen2016} or gradient based methods.
-In this thesis we will use the gradient based methods laid out in \cite{Steyer2021} to calculate optimal warping alignment between curves in the setting of sparse and irregularly sampled curves.
-
+Instead, Eq. \ref{eq:2-eldist-def} is usually solved numerically, by minimizing a cost function $H[\gamma] = \int_0^1 \norm{q_1(t) - q_2\left( \gamma(t) \right) \sqrt{\dot\gamma(t)}}\, dt$ using a dynamic programming algorithm \parencite[see e.g.][152]{SrivastavaKlassen2016} or gradient based methods \parencite[see e.g.][]{Steyer2021}.
 
 
 \subsubsection*{The Elastic Full Procrustes Distance}
@@ -225,164 +225,207 @@ The result is irrespective of the order of applying the transformations.
 \end{proof}
 \end{lemma}
 
-\noindent We can note that the SRV curves are invariant under translation of the original curves, that the rotation is preserved on the SRV level and that scaling translates to SRV level by $\sqrt{\cdot}$.
-It is noteworthy that warping the original curve changes the image of the SRV curve.
+\noindent We can note that the SRV curves are invariant under translation of the original curves, that the rotation is preserved on the SRV level, that scaling translates to SRV level by $\sqrt{\cdot}$.
+It is in particular noteworthy, that warping the original curve changes the image of the SRV curve.
 
 Going forward, we will work in the SRV framework and combine the elastic distance with the full Procrustes distance.
 While the full Procrustes distance (see Def. \ref{def:2-fpdist}) was defined over the normalized and centered curves, the SRV curves are already translation invariant so additional centering is not necessary.
-We will therefore define the \emph{elastic full Procrustes distance} minimal distance, when aligning the scaling, rotation, and warping of the normalized SRV curves $\widetilde q = \frac{q}{\norm{q}}$.
-Note that when the original curve $\beta$ is of unit length $L[\beta] = \int_0^1 \abs{\dot\beta(t)}dt = 1$, the SRV curve $q = \frac{\dot\beta}{\norm{\dot\beta}}$ will be normalized, as $ \norm{q} = \sqrt{ \int_0^1 |q(t)|^2 \, dt} = \sqrt{\int_0^1 |\dot{\beta}(t)| \, dt} = \sqrt{L[\beta]}$.
+We will therefore define the \emph{elastic full Procrustes distance} as the minimal distance, when aligning the scaling, rotation, and warping of the normalized SRV curves $\widetilde q = \frac{q}{\norm{q}}$.
+Note that when the original curve $\beta$ is of unit length $L[\beta] = \int_0^1 \abs{\dot\beta(t)}dt = 1$ the SRV curve $q = \frac{\dot\beta}{\norm{\dot\beta}}$ will be normalized, as $ \norm{q} = \sqrt{ \int_0^1 |q(t)|^2 \, dt} = \sqrt{\int_0^1 |\dot{\beta}(t)| \, dt} = \sqrt{L[\beta]}$.
 
 \begin{definition}[Elastic full Procrustes distance]
-  \label{def:dist}
+  \label{def:2-elfpdist}
   The \emph{elastic full Procrustes distance} between shapes $[\beta_1]$, $[\beta_2]$ of two continuously differentiable planar curves $\beta_1$, $\beta_2 \in \mathcal{AC}([0,1],\mathbb{C})$  is given by 
-    $$d_{EF}([\beta_1], [\beta_2]) = \inf_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \quad \norm{\widetilde q_1 - \lambda e^{i\theta} (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}\, $$
+    \begin{equation}
+      \label{eq:2-elfpdist-def}
+      d([\beta_1], [\beta_2]) = \inf_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,,
+    \end{equation}
     with normalized SRV representation $\widetilde q_{i} = \frac{q_{i}}{\norm{q_{i}}} \in \mathbb{L}^2([0,1], \mathbb{C})$, where $q_i$ is the SRV representation of $\beta_i$, for $i = 1,2$.
 \end{definition}
 
-\noindent To calculate the distance, we need to solve the joint optimization problem over $\omega \times \Gamma$.
-For a fixed $\gamma \in \Gamma$, the optimization problem in Definition \ref{def:dist} mirrors the full Procrustes distance for landmark data, where an explicit solution is known in the planar case \parencite[see][Chapter~8]{DrydenMardia2016}.
-Likewise, for fixed rotation $\theta \in [0,2\pi]$ and scaling $\lambda \in \mathbb{R}^+$, there are known optimization techniques dealing with re-parametrisation.
-\begin{equation*}
-  (\lambda^*,\, \theta^*,\, \gamma^*) = \argmin_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi],\, \gamma \in \Gamma} \norm{z_1 - \lambda e^{i\theta} (z_2 \circ \gamma) \sqrt{\dot\gamma}}
-\end{equation*}
-Here, using one parameter $\omega = \lambda e^{i\theta} \in \mathbb{C}$ for rotation and scaling can simplify notation.
-The rotation and scaling parameters can always be recovered by $\lambda = \abs{\omega}$ and $\theta = \arg(\omega)$.
+\noindent To calculate the elastic full Procrustes distance, we need to solve the joint optimization problem over $\mathbb{C} \times \Gamma$
 \begin{equation}
-  \label{eq:argmin}
-  (\omega^*,\, \gamma^*) = \argmin_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \norm{z_1 - \omega (z_2 \circ \gamma) \sqrt{\dot\gamma}}
+  \label{eq:2-elfpdist-opt}
+  \left(\omega^\text{opt},\, \gamma^\text{opt} \right) = \argmin_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,,
 \end{equation}
-
-The usual strategy is to optimize over the sets of parameters individually and then to iterate through both solutions.
-\todo{Citation, write more here!}
-Let us first consider the optimization with respect to rotation and scaling.
-For fixed $\gamma \in \Gamma$ with $\widetilde z_2 = (z_2 \circ \gamma) \sqrt{\dot\gamma}$ we can write Eq.\ \ref{eq:argmin} as
+so that the elastic full Procrustes distance is given as the $\mathbb{L}^2$-distance of the optimally aligned normalized SRV curves
 \begin{equation}
-  \label{eq:argmin_rot}
-  \omega^* = \argmin_{\omega \in \mathbb{C}}\,\, \norm{z_1 - \omega \widetilde z_2},
+  d([\beta_1], [\beta_2]) = \norm{\widetilde q_1 - \omega^\text{opt} ( \widetilde q_2 \circ \gamma^\text{opt}) \sqrt{\dot{\gamma^\text{opt}}}}_{\mathbb{L}^2}\,.
 \end{equation}
-which can be solved analytically.
+Following \cite{SrivastavaEtAl2011} we can optimize over the sets of parameters individually and then to iterate through both solutions until some form of convergence is reached.
+Let us first consider the optimization over $\omega \in \mathbb{C}$ for a fixed $\gamma^{(k)} \in \Gamma$.
+\begin{equation}
+  \label{eq:2-elfpdist-rot}
+  \omega^\text{(k)}= \argmin_{\omega \in \mathbb{C}}\,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot{\gamma^{(k)}}}}_{\mathbb{L}^2}\,,
+\end{equation}
+Eq. \ref{eq:2-elfpdist-rot} is equivalent to the optimization problem of the full Procrustes distance defined in Def. \ref{def:2-fpdist}.
+Following Lemma \ref{lem:2-fpdist} ii.), the solution is given by the Procrustes fit of $(\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot{\gamma^{(k)}}}$ onto $\widetilde q_1$ with 
+\begin{equation}
+  \label{eq:2-elfpdist-rot-opt}
+  \omega^{(k)} =\langle (\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot\gamma^{(k)}},\, \widetilde q_1 \rangle
+\end{equation}
+For fixed rotation and scaling $\omega^{(k)} \in \mathbb{C}$ the optimization problem over $\gamma \in \Gamma$ is given by 
+\begin{equation}
+  \label{eq:2-elfpdist-wrp}
+  \gamma^{(k+1)} = \arginf_{\gamma \in \Gamma}\,\, \norm{\widetilde q_1 - (\omega^{(k)} \widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,.
+\end{equation}
+Again, Eq. \ref{eq:2-elfpdist-wrp} is equivalent to the optimization problem of the elastic distance defined in Def. \ref{def:2-eldist}, when aligning the parametrization of the normalized SRV curve $\widetilde q_1$ and the rotation and scaling aligned, normalized SRV curve $\omega^{(k)} q_2$.
+A solution $\gamma^{(k+1)}$ can be found by applying known optimization techniques such as a dynamical programming algorithm or a gradient based method.
+In this thesis we will use the methods laid out in \cite{Steyer2021}, for solving Eq.\ \ref{eq:2-elfpdist-wrp} in the setting of sparse and irregularly sampled curves.
 
-\begin{lemma}
-  \label{lem:dist}
-  \begin{enumerate}[label=\emph{\roman*.)}]
-    \item For a fixed $\gamma \in \Gamma$, the optimal scaling and rotation solving Eq.\ \ref{eq:argmin_rot} is 
-      $$ \omega^* = \langle \widetilde z_2,\, z_1 \rangle = \langle (z_2 \circ \gamma) \sqrt{\dot\gamma},\, z_1 \rangle$$
-    \item The optimization problem in Definition \ref{def:dist} can then be reduced to
-      $$ d_{EF}([\beta_1],[\beta_2]) = \inf_{\gamma \in \Gamma} \sqrt{ 1 - \langle z_1, (z_2 \circ \gamma) \sqrt{\dot\gamma} \rangle \langle (z_2 \circ \gamma) \sqrt{\dot\gamma}, z_1 \rangle }$$
+\begin{algorithm}[Elastic full Procrustes distance]
+  \label{alg:2-dist}
+  $\beta_1, \beta_2$ absolutely continous planar curves with SRV curves $q_1, q_2 \in \mathbb{L}^2([0,1], \mathcal{C})$ and normalized SRV curves $\widetilde q_i = \frac{q_i}{\norm{q_i}}$.
+  Set $\gamma^{(0)} = t$  as the initial parametrization alignment.
+  Set $k = 0$. 
+  \begin{enumerate}
+    \item Calculate $\omega^{(k)} = \langle (\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot\gamma^{(k)}},\, \widetilde q_1 \rangle$. \textbf{Stop} if ...
+    \item Solve $\gamma^{(k+1)} = \argmin_{\gamma \in \Gamma} \norm{\widetilde q_1 - (\omega^{(k)} \cdot \widetilde q_2 \circ \gamma ) \sqrt{\dot\gamma}}_{\mathbb{L}^2}$.
+    \item Set $k = k+1$ and return to Step 1.
   \end{enumerate}
-  \begin{proof}
-  See \ref{app:deriv-full-proc-dist} in the appendix.
-  \end{proof}
-\end{lemma}
-\begin{remark}
-  For fixed $\gamma \in \Gamma$, we can use the first part of Lemma \ref{lem:dist} to calculate the optimal rotation and scaling alignment of $\widetilde z_2 = (z_2 \circ \gamma) \sqrt{\dot\gamma}$ onto $z_1$. The alignment $\widetilde z_2^P = \langle \widetilde z_2,\, z_1 \rangle \, \widetilde z_2$ is called the \emph{Procrustes fit} of $\widetilde z_2$ onto $z_1$. The second part of Lemma \ref{lem:dist} will be useful for mean calculation in the next section.
-\end{remark}
+  The elastic full Procrustes distance is given as $d([\beta_1],[\beta_2]) = \norm{\widetilde q_1 - \omega^{(k)} ( \widetilde q_2 \circ \gamma^{(k)} ) \sqrt{\dot{\gamma^{(k)}}}}_{\mathbb{L}^2}$.
+  \todo[inline]{Stopping criterion nochmal überlegen.}
+\end{algorithm}
+
+\noindent See Figure \ref{fig:2-elastic-pfit} for an example of two curves that have been aligned by minimizing their elastic full Procrustes distance.
 
 \begin{figure}
   \centering
-  \begin{subfigure}{.32\textwidth}
+  \begin{subfigure}{.48\textwidth}
     \centering
-    \inputTikz{2-pfit}
+    \missingfigure{2-pfit}
   \end{subfigure}\hfill%
-  \begin{subfigure}{.32\textwidth}
+  \begin{subfigure}{.48\textwidth}
     \centering
-    \inputTikz{2-pfit-srv-aligned}
-  \end{subfigure}\hfill%
-  \begin{subfigure}{.32\textwidth}
-    \centering
-    \inputTikz{2-pfit-aligned}
+    \missingfigure{2-pfit-aligned}
   \end{subfigure}
   \caption{
-    Procrustes fit of two example curves (left) on normalized SRV (middle) and original curve level (right).
-    On normalized SRV level, the Procrustes fit of $z_2$ (green) onto $z_1$ (blue) is calculated as $\omega^* z_2$, where $\omega^* = \left\langle z_2,\, z_1 \right\rangle$ is the optimal scaling and rotation alignment.
-    On original curve level, the Procrustes fit can then be constructed as 
-    Data: see Figure \ref{fig:1-shape}.}
-  \label{fig:2-pfit}
+    Elastic Procrustes Fits.
+    Data: See Figure \ref{fig:1-shape}.}
+  \label{fig:2-elastic-pfit}
 \end{figure}
-
-Given the current $\omega \in \mathbb{C}$ with $z_2^P = \omega z_2$, the optimization with respect to re-parametrization can be written as
-\begin{equation}
-  \label{eq:argmin_wrp}
-  \gamma^* = \argmin_{\gamma \in \Gamma}\,\, \norm{z_1 - (z_2^P \circ \gamma) \sqrt{\dot\gamma}}.
-\end{equation}
-This is a well known problem and usually solved numerically by minimizing a cost function $H[\gamma] = \int_0^1 \norm{z_1(t) - z_2^P\left( \gamma(t) \right) \sqrt{\dot\gamma(t)}}\, dt$ using a dynamic programming algorithm (DPA) or gradient based methods \parencite[see][]{SrivastavaEtAl2011}.
-In this thesis we will use the methods laid out in \cite{Steyer2021}, for solving Eq.\ \ref{eq:argmin_wrp} in the setting of sparse and irregularly sampled curves.
-
-\paragraph{Anmerkung für Lisa}
-Ich habe mich noch gefragt ob man anstatt Iteration über Eq.\ \ref{eq:argmin_rot} und Eq.\ \ref{eq:argmin_wrp} die Distanz in Lemma \ref{lem:dist} ii.) auch direkter optimieren kann.
-\begin{align*}
-  \gamma^* = & \argmin_{\gamma \in \Gamma} \sqrt{1 - \langle z_1, \widetilde z_2 \rangle \langle \widetilde z_2, z_1 \rangle } \\
-    = & \argmax_{\gamma \in \Gamma} \langle z_1, \widetilde z_2 \rangle \langle \widetilde z_2, z_1 \rangle \\
-    = & \argmax_{\gamma \in \Gamma} \int_0^1 \int_0^1
-    \overline{z_1(t)} \underbrace{\widetilde z_2(t) \overline{\widetilde z_2(s)}}_{\coloneqq \, {\widetilde C}(s,t)} z_1(s) \, dt ds \\
-    = & \argmax_{\gamma \in \Gamma} \langle \widetilde C \, z_1, z_1 \rangle
-\end{align*}
-Mit $\widetilde C(s,t)$ der Kovarianz-Funktion von $\widetilde z_2 = (z_2 \circ \gamma) \sqrt{\dot\gamma}$.
-Habe das jetzt nicht weiter verfolgt (weil Zeit), aber vielleicht ist das ganz interessant?
-Man kann das glaube ich auch umschreiben mit $\breve z_1 = (z_1 \circ \gamma^{-1}) \sqrt{\dot{\gamma^{-1}}}$ als $\argmax_{\gamma \in \Gamma} \langle C \, \breve z_1, \breve z_1 \rangle$.
-
-\todo[inline]{Write iterative procedure as algorithm! Basically as in \cite{SrivastavaEtAl2011}.}
 
 
 \section{The Elastic Full Procrustes Mean for Planar Curves}
 \label{sec:2-mean}
-\todo[inline]{Nummerierung der Equations überarbeiten}
-We now want to calculate shape means for a random sample of planar curves.
+We now want to use the elastic Full Procrustes distance to calculate shape means for sets of planar curves.
 Again, we assume all curves to be absolutely continous $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$ with corresponding SRV curves $q_i \in \mathbb{L}^2([0,1],\, \mathbb{C})$, $i=1,\dots,N$.
-As we want to take into account shape invariance in the mean calculation, we cannot simply use sums or integrals to calculate a sample mean shape.
-Instead, we can use a more general concept for mean calculation, where the mean is defined as a minimizer over the sum of squared distances to each observation, for choice of a sensible distance in the space of interest.
+Because we want to take into account invariance with respect to shape-preserving transformations, we canno simply define the mean using sums or integrals.
+Instead, we can define the mean as a minimizer over the sum of squared elastic full Procrustes distances between the shape of each curve and the mean shape.
 If the resulting mean is a global minimum, it is usually called a \enquote{sample Fr\'echet mean} \parencite{Frechet1948}, if it is a local minimum a \enquote{sample Karcher mean} \parencite{Karcher1977} \parencite[see][111]{DrydenMardia2016}.
 
-\begin{definition}[Sample elastic full Procrustes mean]
-  \label{def:mean}
-  For a set of curves $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$, $i = 1,\dots,N$,  their \emph{sample elastic full Procrustes mean} is given by the minimizing shape $\hat{[\mu]}$ with
-  $$ \hat{[\mu]} = \arginf_{[\mu] \in \mathcal{S}} \sum_{i=1}^N d_{EF}([\mu], [\beta_i])^2\,,$$
+\begin{definition}[Elastic full Procrustes mean]
+  \label{def:2-mean}
+  For a set of curves $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$, $i = 1,\dots,N$,  their \emph{elastic full Procrustes mean} is given by the minimizing shape $\hat{[\mu]}$ with
+  \begin{equation}
+    \label{eq:2-mean-def}
+    \hat{[\mu]} = \arginf_{[\mu] \in \mathcal{S}} \sum_{i=1}^N d_{EF}([\mu], [\beta_i])^2\,,
+  \end{equation}
   where $\mathcal{S} = \left\{ [\beta] : \beta \in \mathcal{AC}([0,1],\,\mathbb{C}) \right\}$ is the shape space.
 \end{definition}
 
-Instead of working with equivalence classes as in Def. \ref{def:mean}, it is often simpler to work with a specific element $\hat\mu \in \hat{[\mu]}$, that acts as a \enquote{representation} of the sample mean shape.
-One possibility is to use a representation that is of unit-length and starts at the origin, so that $L[\hat\mu] = \int_0^1 \norm{\dot{\hat\mu}(t)}\, dt = 1$ and $\hat\mu(0) = 0$.
-This is an attractive choice when working in the SRV framework, as we do not have to worry about reconstructing translation when calculating $\hat\mu$ from its respective SRV curve $\hat\mu_q$ by $\hat\mu(t) = \hat\mu(0) + \int_0^t \hat\mu_q(s) \norm{\hat\mu_q(s)}\,ds$.
-Another possibility would be to use a unit-length representation that is centered, so that $\abs{\int_0^1 \hat\mu(t)\, dt} = 0$, which may be achieved by setting $\hat\mu(0) = \int_0^1 \int_0^t \hat\mu_q(s) \norm{ \hat\mu_q(s)}\,ds\,dt$ when reconstructing $\hat\mu$ from $\hat\mu_q$.
+\noindent In practice, we will always solve Eq. \ref{eq:2-mean-def} directly on SRV level, by using the definition of the elastic full Procrustes distance (see Def. \ref{def:2-elfpdist}) and writing it as an optimization problem over the normalized SRV mean function.
+\begin{equation}
+  \label{eq:2-mean-def-srv}
+  \hat\mu_q = \argmin_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+  \sum_{i=1}^N \, \left( \inf_{\omega_i \in \mathbb{C}, \gamma_i \in \Gamma} \,
+    \norm{\mu_q - \omega_i (\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i}} \right)^2\,.
+\end{equation}
+The estimated normalized SRV mean $\hat{\mu}_q$ then defines a representative unit-length mean shape $\hat{\mu} \in \hat{[\mu]}$ by integration $\hat\mu(t) = \hat\mu(0) + \int_0^t \hat\mu_q(s) \norm{\hat\mu_q(s)}\,ds$, which is unique up to translation $\hat\mu(0)$.
+When re-constructing $\hat\mu$ from $\hat\mu_q$, one may decide to set $\hat\mu(0)$ to a certain value depending on the application.
+In particular, setting $\hat\mu(0) = 0$, so that the mean curve starts at the origin, makes sense when the object represented by the mean curve has a \enquote*{natural} starting point shared across all objects of this type.
+An example, explored in Section \ref{sec:4-tounges} are tounge shapes, which all connected to the back of the mouth on one end.
+Another possibility would be choose a $\hat\mu(0)$ that centers the mean curve, by setting $\hat\mu(0) = \int_0^1 \int_0^t \hat\mu_q(s) \norm{ \hat\mu_q(s)}\,ds\,dt$.
 From the point of shape analysis, the choice of representation does not make a difference, as both mean curves are elements of $\hat{[\mu]}$ and therefore have the same shape.
 However, the distinction becomes important when the estimated mean curve $\hat\mu$ is used in concert with other curves, for example when visualizing multiple curves or when comparing multiple class mean shapes, as those do not typically share the same center or starting point.
-Differences between both representations will be explored using empirical data of tounge shapes in Section \ref{sec:tounge}.
+Differences between both representations will be explored using the empirical tounge shapes data in Section \ref{sec:4-tounges}.
 
-Note that we can always construct $\hat\mu$ (and therefore $\hat{[\mu]}$) from $\hat\mu_q$ by integration.
-Turning back to the actual mean calculation, we can therefore use the Def. \ref{def:dist} to reformulate the optimization problem in Def. \ref{def:mean} on SRV level, where we now optimize over possible normalized SRV representations $\mu_q$ of the mean shape $[\mu]$. 
-$$ \hat\mu_q = \argmin_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-  \sum_{i=1}^N \, \left( \inf_{\omega_i \in \mathbb{C}, \gamma_i \in \Gamma} \,
-    \norm{\mu_q - \omega_i (z_i \circ \gamma_i) \sqrt{\dot\gamma_i}} \right)^2 $$
-Here, $z_i = \frac{q_i}{\norm{q_i}}$ are the observed normalized SRV curves, $\omega_i$ the rotation and scaling alignment to $\mu_q$ and $\gamma_i$ the re-parametrisation alignment to $\mu_q$.
-We can further simplify this by solving the optimization over $\omega_i$ using Lemma \ref{lem:dist} ii.
-\begin{align*}
-  \hat\mu_q = &\, \argmin_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \sum_{i=1}^N \,\inf_{\gamma_i \in \Gamma}\, \left(1 - \langle \mu_q,\,(z_i \circ \gamma_i) \sqrt{\dot\gamma_i} \rangle \langle (z_i \circ \gamma_i) \sqrt{\dot\gamma_i},\, \mu_q\rangle \right) \\
-  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \sum_{i=1}^N \,\sup_{\gamma_i \in \Gamma}\, \langle \mu_q,\,(z_i \circ \gamma_i) \sqrt{\dot\gamma_i} \rangle \langle (z_i \circ \gamma_i) \sqrt{\dot\gamma_i},\, \mu_q\rangle \\
-  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \sum_{i=1}^N \,\sup_{\gamma_i \in \Gamma}\, \left\langle \mu_q,\,(\gamma_i,z_i) \right\rangle \left\langle (\gamma_i, z_i), \mu_q \right\rangle
-\end{align*}
-We end up with a two step optimization problem consisting of an outer optimization over $\mu_q$ and an inner optimization over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
-Similarly to the approaches discussed in \cite{SrivastavaKlassen2016} and to \cite{Steyer2021}, we solve this by \emph{template based alignment} \parencite[see e.g.][271]{SrivastavaKlassen2016}.
-In a first step the mean $\hat\mu_q$ is estimated while keeping the parametrisations fixed, after which the $\gamma_i$ are updated by pairwise warping-alignment between $z_i$ and $\hat\mu_q$, which is usually achieved by DPA or a gradient based approach.
+Turning back to the calculation of $\hat\mu_1$, we can simplify Eq. \ref{eq:2-mean-def-srv} by applying the following Lemma, which uses the analytical solution for the optimization over rotation in the full Procrustes distance (see Lemma \ref{lem:2-fpdist} i.). 
+
+\begin{lemma}
+  \label{lem:2-elfpdist}
+  Let $\beta_1, \beta_2$ be two absolutely continuous planar curves with corresponding shape $[\beta_1], [\beta_2]$. Let $\widetilde q_1, \widetilde q_2$ be the respective normalized SRV curves.
+  The elastic full Procrustes distance is given by
+  \begin{equation}
+    d_{EFP}([\beta_1],[\beta_2]) = \inf_{\gamma \in \Gamma} \quad \sqrt{ 1 - \langle \widetilde q_1, ( \widetilde q_2 \circ \gamma) \sqrt{\dot\gamma} \rangle \langle (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}, \widetilde q_1 \rangle }
+  \end{equation}
+  \begin{proof}
+    The result follows from applying Lemma \ref{lem:2-fpdist} i.) to Eq. \ref{eq:2-elfpdist-def} keeping $\gamma$ fixed.
+  \end{proof}
+  \todo[inline]{Check Proof: Does it really?}
+\end{lemma}
+
+\noindent Then Eq.\ \ref{eq:2-mean-def-srv} can be rewritten as
+\begin{align}
+  \hat\mu_q = &\, \argmin_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \sum_{i=1}^N \,\inf_{\gamma_i \in \Gamma}\, \left(1 - \langle \mu_q,\,(\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i} \rangle \langle (\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i},\, \mu_q\rangle \right) \\
+  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \sum_{i=1}^N \,\sup_{\gamma_i \in \Gamma}\, \langle \mu_q,\,(\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i} \rangle \langle (\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i},\, \mu_q\rangle\,
+\end{align}
+and we end up with a two step optimization problem consisting of an outer optimization over $\mu_q$ and an inner optimization over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
+Similarly to the approaches discussed in \cite{SrivastavaKlassen2016} and to \cite{Steyer2021}, we solve this by \emph{template based alignment} \parencite[see e.g.][271]{SrivastavaKlassen2016}:
+In a first step the mean $\hat\mu_q$ is estimated while keeping the parametrizations fixed, after which the $\gamma_i$ are updated by calculating the optimal warping alignment from the elastic full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.
 Both steps are iterated until the mean shape has converged.
-\textbf{[TODO: Noch genauer auf warping alignment step eingehen -> muss ja erstmal auch procrustes fit berechnen um warping alignen zu können.]}
 
-Let us now consider the outer optimization problem for a fixed set of warping function $\{\gamma_i^*\}_{i=1,\dots,N}$ where we denote the warping aligned normalized SRV curves $(\gamma_i^*, z_i)$ as $\widetilde{z}_i$.
-Note that if no warping alignment has happened yet, we can always set $\gamma_i^*(t) = t$ for all $i=1,\dots,N$ as a starting value.
-The problem we have to solve is:
-\begin{align*}
-  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \sum_{i=1}^N \, \left\langle \mu_q,\, \widetilde z_i \right\rangle \left\langle \widetilde z_i,\, \mu_q \right\rangle \\
-  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \sum_{i=1}^N \, \int_0^1 \int_0^1 \overline{\mu_q (s)} \widetilde z_i(s) \overline{\widetilde z_i(t)} \mu_q(t) \,ds\,dt \\
-  \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \int_0^1 \int_0^1 \overline{\mu_q (s)} \left( \sum_{i=1}^N\, \widetilde z_i(s) \overline{ \widetilde z_i(t)} \right) \mu_q(t) \,ds\,dt
-\end{align*}
-We can identify the inner term as proportional to a sample estimator $\check{C}(s,t) = \frac{1}{N} \sum_{i=1}^N z_i(s) \overline{z_i(t)}$ of the population covariance surface $C(s,t) = \mathbb{E}[z(s) \overline{z(t)}]$, when noting that $\mathbb{E}[z(t)] = 0$ for all $t \in [0,1]$ due to rotational symmetry.
-\textbf{[TODO: Hier wird die Notation etwas unsauber. Man hat hier ja einen Cov. Estimator aus den "gewarpten" Kurven. Vielleicht müsste man sich hier nicht nochmal kurz Gedanken machen wie $C(s,t)$ eigentlich aussieht, wenn man berücksichtigt, dass die $z(t)$ auch random gewarpt sind. Vielleicht ist's auch egal.]}
+Let us consider the outer optimization problem for a fixed set of warping function $\{\gamma_i^{(k)}\}_{i=1,\dots,N}$ with corresponding warping aligned normalized SRV curves $\widetilde q_i^{(k)} = ( \widetilde q_i \circ \gamma_i^{(k)}) \sqrt{\dot{\gamma_i^{(k)}}}$.
+Note that if no warping alignment has happened yet, we can always set $\gamma_i^{(0)}(t) = t$ for all $i=1,\dots,N$ as a starting value.
+The problem we have to solve is
+\begin{align}
+  \hat\mu_q^{(k)} = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \sum_{i=1}^N \, \left\langle \mu_q,\, \widetilde q_i^{(k)} \right\rangle \left\langle \widetilde q_i^{(k)},\, \mu_q \right\rangle\,.
+\end{align}
+We can reformulate this by writing out the complex functional scalar products $\langle f, g \rangle = \int_0^1 \overline{f(t)} g(t) \, dt$ for functions $f,g \in \mathbb{L}^2([0,1], \mathbb{C})$, where $\overline{f(t)}$ denotes the complex conjugate of $f(t)$.
+\begin{align}
+  \hat\mu_q^{(k)} = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \sum_{i=1}^N \, \int_0^1 \int_0^1 \overline{\mu_q (s)} \widetilde q_i^{(k)}(s) \overline{\widetilde q_i^{(k)}(t)} \mu_q(t) \,ds\,dt \\
+  \hat\mu_q^{(k)} = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \int_0^1 \int_0^1 \overline{\mu_q (s)} \left( \sum_{i=1}^N\, \widetilde q_i^{(k)}(s) \overline{ \widetilde q_i^{(k)}(t)} \right) \mu_q(t) \,ds\,dt
+\end{align}
+We can identify the inner term as proportional to a sample estimator $\check{C}^{(k)}(s,t) = \frac{1}{N} \sum_{i=1}^N \widetilde q_i^{(k)}(s) \overline{\widetilde q_i^{(k)}(t)}$ of the population covariance surface of the normalized SRV curves \todo{Warping? (k)??} $C^{(k)}(s,t) = \mathbb{E}[\widetilde q^{(k)}(s) \overline{\widetilde q^{(k)}(t)}]$, when noting that $\mathbb{E}[\widetilde q^{(k)}(t)] = 0$ for all $t \in [0,1]$ due to rotational symmetry.
+\begin{equation}
+\hat\mu_q^{(k)} = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    N\cdot\int_0^1 \int_0^1 \overline{\mu_q (s)} \check C^{(k)}(s,t) \mu_q(t) \,ds\,dt
+\end{equation}
+By replacing $\check C^{(k)}(s,t)$ by its expectation \todo{Notation? (k)??} $C^{(k)}(s,t)$, we can analogously formulate an estimator on the population level.
+\begin{equation}
+  \mu_q^{(k)} = \, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
+    \int_0^1 \int_0^1 \overline{\mu_q (s)} C^{(k)}(s,t) \mu_q(t) \,ds\,dt
+\end{equation}
+We can rewrite this again as a functional scalar product by considering the \emph{covariance operator} $C$ with $(C\mu_q)(s) = \int_0^1 C(s,t) \mu_q(t) dt$ \parencite[see][153]{RamsaySilverman2005}.
+\begin{equation}\
+  \label{eq:quadr_opt}
+  \mu_q^{(k)} = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
+    \left\langle \mu_q, C^{(k)}\mu_q \right\rangle
+\end{equation}
+This is a well known problem in the context of functional principal component analysis (FPCA).
+From $\overline{C(s,t)} = \overline{\mathbb{E}[\widetilde q(s)\overline{\widetilde q(t)}]} = \mathbb{E}[\widetilde q(t)\overline{\widetilde q(s)}] = C(t,s)$ it follows that $\left\langle \mu_q, C \mu_q \right\rangle = \left\langle C \mu_q, \mu_q \right\rangle$ and therefore that $C$ is a \emph{self-adjoint} operator.
+The optimization problem then reduces to an eigenfunction problem 
+\begin{equation}
+  \label{eq:funceig}
+  C^{(k)} u^{(k)} = \lambda^{(k)} u^{(k)} \quad \Leftrightarrow \quad \int_0^1 C^{(k)}(s, t) u^{(k)}(t)\, dt = \lambda^{(k)} u^{(k)}(s)\,,
+\end{equation}
+where $\lambda^{(k)} = \left\langle \mu_q,\, C^{(k)} \mu_q \right\rangle$ is the target function to maximize.
+For normalized eigenfunctions $u^{(k)}_1, u^{(k)}_2,\,\dots$ and corresponding eigenvalues $\lambda^{(k)}_1 \geq \lambda^{(k)}_2 \geq \dots$ of $C^{(k)}(s,t)$, the solution $\hat\mu_q^{(k)}(t)$ is given by the leading normalized eigenfunction $u^{(k)}_1(t)$ of $C^{(k)}(s,t)$ \parencite[see][153,397]{RamsaySilverman2005}.
+
+We will estimate $C^{(k)}(s,t)$ using the methods for covariance estimation from sparse and irregular observations laid out in Section \ref{sec:3}.
+Given such an estimate $\hat C^{(k)}(s,t)$, we can calculate the elastic full Procrustes mean by the following algorithm.
+
+\begin{algorithm}[Elastic full Procrustes mean]
+  \label{algo:mean}
+  Let $\left\{\beta_i\right\}_{i=1,\dots,N}$ be a set of planar curves with corresponding SRV curves $\left\{ q_i \right\}_{i=1,\dots,N}$.
+  Let $\widetilde q_i = \frac{q_i}{\norm{q_i}}$.
+  Set $\gamma_i^0 = t$ for all $i=1,\dots,N$ as the initial parametrisation alignment.
+  Set $k = 0$. 
+  \begin{enumerate}
+    \item For $i=1,\dots,N: \quad$ Set $\widetilde q_i^{(k)}(t) = \widetilde q_i\left(\gamma^{(k)}_i(t)\right) \cdot \sqrt{\dot\gamma_i^{(k)}(t)}$.
+    \item Estimate $\hat C^{(k)}(s,t)$ from $\left\{\widetilde q_i^{(k)}\right\}_{i=1,\dots,N}$. 
+    \item Calculate $u_1^{(k)}$ by eigendecomposition of $\hat C^{(k)}(s,t)$.
+    \item Set $\hat\mu_q^{(k)}$ as $u_1^{(k)}$. \emph{\textbf{Stop}} if $\hat\mu_q^{(k)}$ is close to $\hat\mu_q^{(k-1)}$.
+    \item For $i=1,\dots,N:\quad$ Calculate $\omega^{(k)}_i = \left\langle \widetilde q_i^{(k)},\, \hat\mu_q^{(k)} \right\rangle$.
+    \item For $i=1,\dots,N:\quad$ Solve $\gamma_i^{(k+1)} = \argmin_{\gamma \in \Gamma} \norm{\hat\mu_q^{(k)} - \omega_i^{(k)} (\widetilde q_i \circ \gamma ) \sqrt{\dot\gamma}}$.
+    \item Set $k = k+1$ and return to Step 1.
+  \end{enumerate}
+\end{algorithm}
 
 \begin{figure}
   \centering
@@ -407,43 +450,3 @@ We can identify the inner term as proportional to a sample estimator $\check{C}(
   \caption{Complex covariance surface on original and SRV curve level. Data: see Figure \ref{fig:1-shape}.}
   \label{fig:2-cov}
 \end{figure}
-
-$$ \hat\mu_q = \, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    N\cdot\int_0^1 \int_0^1 \overline{\mu_q (s)} \check C(s,t) \mu_q(t) \,ds\,dt $$
-By replacing $\check C(s,t)$ by its expectation $C(s,t)$, we can analogously formulate an estimator on the population level.
-\textbf{[TODO: Notation?]}
-$$ \hat\mu_q = \, \argmax_{\mu_q \in \mathbb{L}^2:\,\norm{\mu_q} = 1}\,\,
-    \int_0^1 \int_0^1 \overline{\mu_q (s)} C(s,t) \mu_q(t) \,ds\,dt $$
-
-We can rewrite this again as a functional scalar product by considering the \emph{covariance operator} $C$ with $(C\mu_q)(s) = \int_0^1 C(s,t) \mu_q(t) dt$ \parencite[see][153]{RamsaySilverman2005}.
-\begin{equation}
-  \label{eq:quadr_opt}
-  \hat\mu_q = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
-    \left\langle \mu_q, C\mu_q \right\rangle
-\end{equation}
-This is a well known problem in the context of functional principal component analysis (FPCA).
-From $\overline{C(s,t)} = \overline{\mathbb{E}[z(s)\overline{z(t)}]} = \mathbb{E}[z(t)\overline{z(s)}] = C(t,s)$ it follows that $\left\langle \mu_q, C \mu_q \right\rangle = \left\langle C \mu_q, \mu_q \right\rangle$ and therefore that $C$ is a \emph{self-adjoint} operator.
-The optimization problem then reduces to an eigenfunction problem 
-\begin{equation}
-  \label{eq:funceig}
-  Cu = \lambda u \quad \Leftrightarrow \quad \int_0^1 C(s, t) u(t)\, dt = \lambda u(s)\,,
-\end{equation}
-where $\lambda = \left\langle \mu_q,\, C \mu_q \right\rangle$ is the target function to maximize.
-For normalized eigenfunctions $u_1, u_2,\,\dots$ and corresponding eigenvalues $\lambda_1 \geq \lambda_2 \geq \dots$ of $C(s,t)$, the solution $\hat\mu_q(t)$ is given by the leading normalized eigenfunction $u_1(t)$ of $C(s,t)$ \parencite[see][153,397]{RamsaySilverman2005}.
-
-\begin{algorithm}[Sample elastic full Procrustes mean]
-  \label{algo:mean}
-  Let $\left\{\beta_i\right\}_{i=1,\dots,N}$ be a sample of planar curves with corresponding SRV curves $\left\{ q_i \right\}_{i=1,\dots,N}$.
-  Let $z_i = \frac{q_i}{\norm{q_i}}$.
-  Set $\gamma_i^0 = t$ for all $i=1,\dots,N$ as the initial parametrisation alignment.
-  Set $k = 0$. 
-  \begin{enumerate}
-    \item For $i=1,\dots,N$: Set $z_i^k(t) = z_i\left(\gamma^k_i(t)\right) \cdot \sqrt{\dot\gamma_i^k(t)}$.
-    \item Estimate $C(s,t) = \mathbb{E}[z(s)\overline{z(t)}]$ from $\left\{z_i^k\right\}_{i=1,\dots,N}$. Call this estimate $\hat{C}^k(s,t)$.
-    \item Set $\mu_q^k$ as the leading normalized eigenfunction of $\hat{C}^k(s,t)$. \emph{\textbf{Stop}} if $\mu_q^k$ is close to $\mu_q^{k-1}$.
-    \item For $i=1,\dots,N$: Calculate the optimal rotation and scaling alignment $\omega^k_i = \left\langle z_i^k,\, \mu_q^k \right\rangle$.
-    \item For $i=1,\dots,N$: Solve $\gamma_i^{k+1} = \argmin_{\gamma \in \Gamma} \norm{\mu_q^k - (\omega_i^k \cdot z_i \circ \gamma ) \sqrt{\dot\gamma}}$.
-    \item Set $k = k+1$ and return to Step 1.
-  \end{enumerate}
-\end{algorithm}
-
